Bug 121718 - FILESAVE XLSX Header page number changes after exported
Summary: FILESAVE XLSX Header page number changes after exported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.1.0
Keywords: filter:xlsx
Depends on:
Blocks: XLSX-Header-Footer
  Show dependency treegraph
 
Reported: 2018-11-26 13:47 UTC by NISZ LibreOffice Team
Modified: 2020-09-14 09:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original and exported document side by side in Excel. (140.13 KB, image/png)
2018-11-26 13:48 UTC, NISZ LibreOffice Team
Details
Example file from Excel (16.70 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-11-26 13:49 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (15.88 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-11-26 13:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2018-11-26 13:47:46 UTC
Description:
    1. Create a new document in Microsoft Excel.
    2. On the Page Layout tab, in the Page Setup group, click the Dialog Box Launcher Button next to Page Setup.
    3. Select Header/Footer tab.
    4. Select the Page 1 option under header.
    5. Click on OK button.
    6. Type text “Text” and press Enter.
    7. Save the file as XLSX.
    8. Open the same file in Calc.
    9. Select File and Save As.
    10. Name the file.
    11. Open the exported file in Excel.
    12. On the View tab, in the Workbook Views group, click Page Layout.
    13. Compare the original file opened in Excel and the exported file opened in Excel.


Steps to Reproduce:
    1. Create a new document in Microsoft Excel.
    2. On the Page Layout tab, in the Page Setup group, click the Dialog Box Launcher Button next to Page Setup.
    3. Select Header/Footer tab.
    4. Select the Page 1 option under header.
    5. Click on OK button.
    6. Type text “Text” and press Enter.
    7. Save the file as XLSX.
    8. Open the same file in Calc.
    9. Select File and Save As.
    10. Name the file.
    11. Open the exported file in Excel.
    12. On the View tab, in the Workbook Views group, click Page Layout.
    13. Compare the original file opened in Excel and the exported file opened in Excel.

Actual Results:
On header Page 1 changed to Page 0.

Expected Results:
Header page number shouldn’t change.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2018-11-26 13:48:13 UTC
Created attachment 147048 [details]
Screenshot of the original and exported document side by side in Excel.
Comment 2 NISZ LibreOffice Team 2018-11-26 13:49:36 UTC
Created attachment 147049 [details]
Example file from Excel
Comment 3 NISZ LibreOffice Team 2018-11-26 13:50:10 UTC
Created attachment 147050 [details]
The original file saved by Calc
Comment 4 Xisco Faulí 2018-11-26 17:33:08 UTC
Reproduced in

Version: 6.2.0.0.beta1+
Build ID: a63cd8bbe7cf881daa8dc7a7f32f3e5ac384e902
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.10; Render: default; 

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 5 QA Administrators 2019-12-03 03:32:34 UTC Comment hidden (obsolete)
Comment 6 NISZ LibreOffice Team 2019-12-03 11:20:57 UTC
Still happens with:

Version: 6.5.0.0.alpha0+ (x64)
Build ID: 0faf74a58847a4b87ae43092fe1ca2011bbd1f90
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL
Comment 7 Commit Notification 2020-08-07 12:36:23 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/790c0aeab258f770eb94f2d2cceceebfeaceb825

tdf#121718 XLSX export: fix first page number

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2020-09-14 09:46:13 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded