tdf#121718 sc: XLSX export: first page number fix

Changed code to not save 'useFirstPageNumber' and 'firstPageNumber'
if "First page number" is not checked.

It was needed because Excel does not care about 'useFirstPageNumber',
and blindly load 'firstPageNumber' even if that had an invalid value
(that could happen when useFirstPageNumber==false).

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: I69c9ed0fd4fdca1794d4bbc197713ac687eb4005